// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApplicationDynamoDBTable renders a dynamodb table with streams enabled 1`] = `
"{
  "resource": {
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "billing_mode": "PROVISIONED",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-",
        "stream_enabled": true,
        "stream_view_type": "NEW_AND_OLD_IMAGES"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table global secondary indexes 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_ReadCapacity_policy_document_EF789C68": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_policy_document_9032D023": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_card-index_ReadCapacity_index_policy_81408390": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_card-index_WriteCapacity_index_policy_C3071E31": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_policy_558BE4C0": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_policy_45352666": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_card-index_ReadCapacity_index_target_8A2F409F": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 5,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:index:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_card-index_WriteCapacity_index_target_F5D86C4A": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 5,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:index:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:table:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:table:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
          {
            "hash_key": "card-type",
            "name": "card-index",
            "projection_type": "ALL",
            "range_key": "home_on_the_range",
            "read_capacity": 5,
            "write_capacity": 5
          }
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649": {
        "name": "abides--ReadCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}"
      },
      "testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60": {
        "name": "abides--WriteCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_ReadCapacity_role_2B9645BB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}",
        "name": "abides--ReadCapacity-AutoScalingRole"
      },
      "testDynamoDBTable_WriteCapacity_role_4BB8E3F1": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}",
        "name": "abides--WriteCapacity-AutoScalingRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB",
          "aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}"
      },
      "testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1",
          "aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table that is not protected from being destroyed 1`] = `
"{
  "resource": {
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": false
        },
        "name": "abides-"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with 2 global secondary indexes 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_ReadCapacity_policy_document_EF789C68": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_policy_document_9032D023": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_card-index-2_ReadCapacity_index_policy_72866E91": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_card-index-2_WriteCapacity_index_policy_BDD340E7": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_policy_558BE4C0": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_policy_45352666": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_card-index-2_ReadCapacity_index_target_5B34D257": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 10,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index-2",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:index:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_card-index-2_WriteCapacity_index_target_2BCC5603": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 10,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}/index/card-index-2",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:index:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:table:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:table:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
          {
            "hash_key": "card-type-123",
            "name": "card-index-2",
            "projection_type": "ALL",
            "range_key": "home_home_on_the_range",
            "read_capacity": 10,
            "write_capacity": 10
          }
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649": {
        "name": "abides--ReadCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}"
      },
      "testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60": {
        "name": "abides--WriteCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_ReadCapacity_role_2B9645BB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}",
        "name": "abides--ReadCapacity-AutoScalingRole"
      },
      "testDynamoDBTable_WriteCapacity_role_4BB8E3F1": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}",
        "name": "abides--WriteCapacity-AutoScalingRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB",
          "aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}"
      },
      "testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1",
          "aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with minimal config 1`] = `
"{
  "resource": {
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with on-demand capacity 1`] = `
"{
  "resource": {
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PAY_PER_REQUEST",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with read and write capacity 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_ReadCapacity_policy_document_EF789C68": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_policy_document_9032D023": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_policy_558BE4C0": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_policy_45352666": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:table:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:table:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649": {
        "name": "abides--ReadCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}"
      },
      "testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60": {
        "name": "abides--WriteCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_ReadCapacity_role_2B9645BB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}",
        "name": "abides--ReadCapacity-AutoScalingRole"
      },
      "testDynamoDBTable_WriteCapacity_role_4BB8E3F1": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}",
        "name": "abides--WriteCapacity-AutoScalingRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB",
          "aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}"
      },
      "testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1",
          "aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with read and write capacity and tags 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_ReadCapacity_policy_document_EF789C68": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_policy_document_9032D023": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_policy_558BE4C0": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_policy_45352666": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:table:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      },
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:table:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-",
        "tags": {
          "hobby": "bowling",
          "name": "thedude"
        }
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649": {
        "name": "abides--ReadCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}"
      },
      "testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60": {
        "name": "abides--WriteCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_ReadCapacity_role_2B9645BB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}",
        "name": "abides--ReadCapacity-AutoScalingRole",
        "tags": {
          "hobby": "bowling",
          "name": "thedude"
        }
      },
      "testDynamoDBTable_WriteCapacity_role_4BB8E3F1": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}",
        "name": "abides--WriteCapacity-AutoScalingRole",
        "tags": {
          "hobby": "bowling",
          "name": "thedude"
        }
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB",
          "aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}"
      },
      "testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1",
          "aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with read capacity 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_ReadCapacity_policy_document_EF789C68": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_policy_558BE4C0": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBReadCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBReadCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_ReadCapacity_table_target_5A95550B": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.arn}",
        "scalable_dimension": "dynamodb:table:ReadCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649": {
        "name": "abides--ReadCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_policy_document_EF789C68.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_ReadCapacity_role_2B9645BB": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_ReadCapacity_assume_role_policy_document_54F698F0.json}",
        "name": "abides--ReadCapacity-AutoScalingRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_ReadCapacity_role_attachment_3C0829C2": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB",
          "aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_ReadCapacity_autoscaling_policy_52DA6649.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_ReadCapacity_role_2B9645BB.name}"
      }
    }
  }
}"
`;

exports[`ApplicationDynamoDBTable renders dynamo db table with write capacity 1`] = `
"{
  "data": {
    "aws_iam_policy_document": {
      "testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325": {
        "statement": [
          {
            "actions": [
              "sts:AssumeRole"
            ],
            "effect": "Allow",
            "principals": [
              {
                "identifiers": [
                  "application-autoscaling.amazonaws.com"
                ],
                "type": "Service"
              }
            ]
          }
        ]
      },
      "testDynamoDBTable_WriteCapacity_policy_document_9032D023": {
        "statement": [
          {
            "actions": [
              "application-autoscaling:*",
              "cloudwatch:DescribeAlarms",
              "cloudwatch:PutMetricAlarm"
            ],
            "effect": "Allow",
            "resources": [
              "*"
            ]
          },
          {
            "actions": [
              "dynamodb:DescribeTable",
              "dynamodb:UpdateTable"
            ],
            "effect": "Allow",
            "resources": [
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}",
              "\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.arn}*"
            ]
          }
        ]
      }
    }
  },
  "resource": {
    "aws_appautoscaling_policy": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_policy_45352666": {
        "depends_on": [
          "aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE",
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "name": "DynamoDBWriteCapacityUtilization:\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "policy_type": "TargetTrackingScaling",
        "resource_id": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.resource_id}",
        "scalable_dimension": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.scalable_dimension}",
        "service_namespace": "\${aws_appautoscaling_target.testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE.service_namespace}",
        "target_tracking_scaling_policy_configuration": {
          "predefined_metric_specification": {
            "predefined_metric_type": "DynamoDBWriteCapacityUtilization"
          },
          "target_value": 1
        }
      }
    },
    "aws_appautoscaling_target": {
      "testDynamoDBTable_testDynamoDBTable_dynamodb_table_A3DD49A4_WriteCapacity_table_target_EC052FEE": {
        "depends_on": [
          "aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4"
        ],
        "max_capacity": 10,
        "min_capacity": 3,
        "resource_id": "table/\${aws_dynamodb_table.testDynamoDBTable_dynamodb_table_A3DD49A4.name}",
        "role_arn": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.arn}",
        "scalable_dimension": "dynamodb:table:WriteCapacityUnits",
        "service_namespace": "dynamodb"
      }
    },
    "aws_dynamodb_table": {
      "testDynamoDBTable_dynamodb_table_A3DD49A4": {
        "attribute": [
          {
            "name": "attribeautiful",
            "type": "shrugs!"
          }
        ],
        "billing_mode": "PROVISIONED",
        "global_secondary_index": [
        ],
        "hash_key": "123",
        "lifecycle": {
          "ignore_changes": [
            "read_capacity",
            "write_capacity"
          ],
          "prevent_destroy": true
        },
        "name": "abides-"
      }
    },
    "aws_iam_policy": {
      "testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60": {
        "name": "abides--WriteCapacity-AutoScalingPolicy",
        "policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_policy_document_9032D023.json}"
      }
    },
    "aws_iam_role": {
      "testDynamoDBTable_WriteCapacity_role_4BB8E3F1": {
        "assume_role_policy": "\${data.aws_iam_policy_document.testDynamoDBTable_WriteCapacity_assume_role_policy_document_5A7EA325.json}",
        "name": "abides--WriteCapacity-AutoScalingRole"
      }
    },
    "aws_iam_role_policy_attachment": {
      "testDynamoDBTable_WriteCapacity_role_attachment_8ABB9833": {
        "depends_on": [
          "aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1",
          "aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60"
        ],
        "policy_arn": "\${aws_iam_policy.testDynamoDBTable_WriteCapacity_autoscaling_policy_9632CE60.arn}",
        "role": "\${aws_iam_role.testDynamoDBTable_WriteCapacity_role_4BB8E3F1.name}"
      }
    }
  }
}"
`;
